--- a/atom/styles.less
+++ b/atom/styles.less
@@ -1,33 +1,28 @@
 /*
- * Your Stylesheet
- *
- * This stylesheet is loaded when Atom starts up and is reloaded automatically
- * when it is changed and saved.
- *
- * Add your own CSS or Less to fully customize Atom.
- * If you are unfamiliar with Less, you can read more about it here:
- * http://lesscss.org
+ * Emre's Atom stylesheet
  */
 
-
-/*
- * Examples
- * (To see them, uncomment and save)
- */
-
-// style the background color of the tree view
-.tree-view {
-  // font-size: 10px;
-  // background-color: whitesmoke;
-}
-
-// style the background and foreground colors on the atom-text-editor-element itself
 atom-text-editor {
     font-family: "Operator Mono Light";
-    // font-size: 12px;
-    font-weight: 400;
+    font-size: 14px;
+    font-weight: normal;
     line-height: 1.7;
- }
+}
+
+atom-text-editor::shadow{
+    .entity.other.attribute-name {
+        font-style: italic;
+    }
+}
+
+atom-panel.tool-panel {
+    font-size: 0.88em;
+}
+
+.editor .comment, atom-text-editor.editor .syntax--comment {
+  font-family: "Operator Mono Light";
+  font-weight: 100;
+}
 
 // style UI elements inside atom-text-editor
 atom-text-editor .cursor {
